--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <form action="" method="" name="move-box">
             <input type="text" id="left-box">
-            <button type="button" id="button" onclick="main_function()">wow</button>
+            <button type="button" id="button" onclick="main_function()">JUMP ></button>
             <input type="text" id="right-box">
         </form>
     </main>
